# ladspa

./: .gitignore  .travis.yml  Makefile.am  README  aclocal.m4  allpass_1895.xml  am_pitchshift_1433.xml  analogue_osc_1416.xml  autogen.sh  bandpass_a_iir_1893.xml  bandpass_iir_1892.xml  bode_shifter_1431.xml  bode_shifter_cv_1432.xml  bozosoity-checker.pl  butterworth_1902.xml  chebstortion_1430.xml  comb_1887.xml  config.h.in  configure  configure.ac  configure.in  decay_1886.xml  delay_1898.xml  delayorama_1402.xml  dj_eq_1901.xml  dj_flanger_1438.xml  dyson_compress_1403.xml  fad_delay_1192.xml  fast_lookahead_limiter_1913.xml  flanger_1191.xml  fm_osc_1415.xml  giant_flange_1437.xml  gong_beater_1439.xml  gsm_1215.xml  gverb_1216.xml  harmonic_gen_1220.xml  hermes_filter_1200.xml  highpass_iir_1890.xml  hilbert_1440.xml  imp_1199.xml  (+33 more)
docs/: Makefile  addstyle.pl  makedocs.pl
gverb/: gverb.h
impulses/: mkall-h.sh  reorder.pl  scale.pl
metadata/: Makefile.am  lxml2rdf.pl  swh-plugins.rdf  txt2scale.pl
po/: de.po  en_GB.po  swh-plugins.pot
timetest/: autotimetest.pl  timecmp  timetest
util/: Makefile.am  blo.c  blo.h  buffer.h  iir.h  pitchscale.c  pitchscale.h  waveguide_nl.h
